# AI-learning-code

./: .gitignore  README.md  decode.py  rateindexfund.py  requirements.txt
Agents/: codereview.py  crewai.py
Claude/: PromptGeneration.py
Dev-to-challenge/: TODO.md  ollama-server.py  requirements.txt  structureoutput.py  tokenizer.py
DocConverter/: docling-converter.py
Dspy/: AI.py  README.md  basic.py  com.json  custom_optimizer.py  index.py  optimize_llm_output.md  optimized_model.json  optimizer.py  output.txt  portkey.py  textsummarize.py
Eval/: truelens.py
GraphRag/: index.py  index2.py
Hallucination/: .deepeval-cache.json  G-Eval.py  README.md  deep-Eval.py  prometheus.py  requirement.txt
LLMDetails/: google.md
LLMMemory/: hello.py  pyproject.toml
LamaIndexc/: agents.py  chunking.py  semantic_chunking.py  workflow.py
Langchain/: agent.py  index.py  langraphagent.py  ollamachatwithtool.py  ragwithagent.py  requirement.txt  utils.py  vectorVisulization.py
Langtrace/: index.py  requirement.txt
OllamaCode/: main.py
Projects/: awsome-github.py  devto-comments.py  mail-summary.py
RAG/: basicrag.py  cosinesimilarity.py  huggingface_rag.py  lamaindex-workflow-rag.py  langgraph_agentic_rag.py  rag_from_scratch.py  requirements.txt
StructuredOutput/: instructor.py  instructors.py  instructorss.py  requirement.txt
VertexAI/: vertexi.py
Voice-Model/: hello.py  ollama-voice.py  ollama-voice2.py  pyproject.toml  readme.md
Voice-Model/voicetotext/: hello.py  pyproject.toml  vllm-wishper.py
deep-learning/: precptron.py
devto/: package.json  (+2 more)
(+16 files in other folders)
