[project]
name = "voice-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-cpp-python>=0.3.2",
    "orpheus-cpp>=0.0.1.post1",
    "scipy>=1.15.2",
]

[[tool.uv.index]]
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"

[tool.uv.workspace]
members = ["voicetotext"]
